// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Trip {
  id           String         @id @default(uuid())
  destination  String
  starts_at    DateTime
  ends_at      DateTime
  is_confirmed Boolean        @default(false)
  created_at   DateTime       @default(now())
  updated_at   DateTime       @updatedAt()
  participants Participants[]
  activities   Activity[]
  links        Link[]

  @@map("trips")
}

model Participants {
  id           String  @id @default(uuid())
  name         String?
  email        String
  is_confirmed Boolean @default(false)
  is_owner     Boolean @default(false)
  trip         Trip    @relation(fields: [trip_id], references: [id])
  trip_id      String

  @@map("participants")
}

model Activity {
  id        String   @id @default(uuid())
  title     String
  occurs_at DateTime
  trip      Trip     @relation(fields: [trip_id], references: [id])
  trip_id   String

  @@map("activities")
}

model Link {
  id      String @id @default(uuid())
  title   String
  url     String
  trip    Trip   @relation(fields: [trip_id], references: [id])
  trip_id String

  @@map("links")
}
